add arrow back icon

--- a/common/src/main/res/drawable/icon_arrow_back.xml
+++ b/common/src/main/res/drawable/icon_arrow_back.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="58dp"
-    android:height="44dp"
-    android:viewportWidth="58"
-    android:viewportHeight="44">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M33.7071,13.2929C34.0976,13.6834 34.0976,14.3166 33.7071,14.7071L26.4142,22L33.7071,29.2929C34.0976,29.6834 34.0976,30.3166 33.7071,30.7071C33.3166,31.0976 32.6834,31.0976 32.2929,30.7071L24.2929,22.7071C23.9024,22.3166 23.9024,21.6834 24.2929,21.2929L32.2929,13.2929C32.6834,12.9024 33.3166,12.9024 33.7071,13.2929Z"
+      android:pathData="M16.4335,2.7753C16.8241,3.1658 16.8241,3.799 16.4336,4.1895L8.6231,12.0001L16.4335,19.8106C16.8241,20.2011 16.8241,20.8343 16.4335,21.2248C16.043,21.6153 15.4099,21.6153 15.0193,21.2248L6.5018,12.7072C6.1112,12.3167 6.1112,11.6835 6.5017,11.293L15.0193,2.7753C15.4098,2.3848 16.043,2.3848 16.4335,2.7753Z"
       android:fillColor="#69707B"
       android:fillType="evenOdd"/>
 </vector>
