feat: 디자인 리소스 (아이콘, 일러스트) 전부 삭제 후 다시 추가
아이콘 사이즈가 바뀐경우도 있어서 깔끔하게 밀어버리고 다시 추가합니다

--- a/common/src/main/res/drawable/icon_chevron_down.xml
+++ b/common/src/main/res/drawable/icon_chevron_down.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="8dp"
-    android:height="15dp"
-    android:viewportWidth="8"
-    android:viewportHeight="15">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M1,13.5L6.2929,8.2071C6.6834,7.8166 6.6834,7.1834 6.2929,6.7929L1,1.5"
+      android:pathData="M18,9L12.7071,14.2929C12.3166,14.6834 11.6834,14.6834 11.2929,14.2929L6,9"
       android:strokeWidth="2"
       android:fillColor="#00000000"
       android:strokeColor="#9BA3AE"
